--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Installing extensions and running your app...",
+      "label": "Installing extensions and dependencies...",
       "type": "shell",
-      "command": "code-server --install-extension ms-python.python --install-extension formulahendry.code-runner && python main.py",
+      "command": "code-server --install-extension ms-python.python --install-extension batisteo.vscode-django --install-extension wholroyd.jinja --install-extension formulahendry.code-runner && pip install -r requirements.txt",
       "presentation": {
         "reveal": "always",
         "panel": "new"
